# Inspectionv2

./: CMakeLists.txt  main.cpp  resource.qrc
include/CameraAPI/: CameraApi.h  CameraApiLoad.h  CameraDefine.H  CameraGrabber.h  CameraImage.h  CameraStatus.h
lib/: MVCAMSDK.lib  MVCAMSDK_X64.lib
src/: ObjectLocator.cpp  ObjectLocator.hpp
